@startuml
class App{
    String infile
    String outfile
    ArrayList<String> names
    ArrayList<HashMap<String, String> employees

    // read in all employees
    // parse all the strings
    // generate output
        // print to outfile
}

class CreateList{
    + readFile(infile)
    - addName(name, names)
}

class Parser {
    + tableData(names)
    - splitLine(names, i)
}

class Output {
    + printTxt(outfile, outputData)
}

class GenerateTable {
   + generateTable(employees)

   + generateHeader()
   + generateDivider()
   + generateData()
}

App o--> CreateList
CreateList o->Parser
Parser o--> GenerateTable
GenerateTable o->Output

@enduml